# quack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
benchmarks/: benchmark_cross_entropy.py  benchmark_gemm_sm90.py  benchmark_layernorm.py  benchmark_rmsnorm.py  benchmark_softmax.py  benchmark_topk.py  pytorch_benchmark_rmsnorm.py  pytorch_benchmark_rmsnorm_backward.py
cute_kernels/: cross_entropy.py  rmsnorm.py  softmax.py
docs/: dsl_control_flow.rst  limitations.rst
media/: 2025-07-10-membound-sol.md
quack/: __init__.py  activation.py  autotuner.py  cross_entropy.py  cute_dsl_utils.py  dense_gemm_sm100.py  dense_gemm_sm90.py  fast_math.py  gemm_act_sm90.py  gemm_config.py  gemm_dact_sm90.py  gemm_interface.py  gemm_wrapper_utils.py  layernorm.py  linear.py  linear_cross_entropy.py  lse.py  mlp.py  pipeline.py  reduce.py  reduction_base.py  rmsnorm.py  softmax.py  symmetric_dense_gemm_sm90.py  tensormap_manager.py  test_intlist.py  tile_scheduler.py  topk.py  utils.py  varlen_utils.py
quack/sort/: bitonic_sort.py  generate_sorting_networks.py  sorting_networks.py  utils.py
tests/: test_cross_entropy.py  test_gemm_interface.py  test_layernorm.py  test_linear.py  test_linear_cross_entropy.py  test_rmsnorm.py  test_softmax.py  test_symmetric_dense_gemm_sm90.py  test_topk.py
